--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -3,8 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="./css/styles.css"
+    <title id="title"></title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <dir id="root"></dir>
+
+    <header>
+      <h1>PortFolio</h1>
+      <nav>
+        <ul>
+          <a href="./index.html">
+            <li><h2>Home</h2></li>
+          </a>
+
+          <a href="./contato.html">
+            <li><h2>Sobre</h2></li>
+          </a>
+          <a href="./contato.html">
+            <li><h2>Contato</h2></li>
+          </a>
+          <a href="./contato.html">
+            <li><h2>blog</h2></li>
+          </a>
+        </ul>
+      </nav>
+
+      <img id="avatarsUrl" src="" alt="Jonas" />
+    </header>
+    <main>
+      <div>
+        <h2>Repositorios</h2>
+        <dir id="cards"></dir>
+      </div>
+      <div>
+        <h1>link post</h1>
+      </div>
+    </main>
+    <script src="./srcipt/index.js"></script>
+  </body>
 </html>
