inicio clone youtube

--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -32,9 +32,9 @@
       <img id="avatarsUrl" src="" alt="Jonas" />
     </header>
     <main>
-      <div>
+      <div class="container_1">
         <h2>Repositorios</h2>
-        <dir id="cards"></dir>
+        <div id="cards"></div>
       </div>
       <div>
         <h1>link post</h1>
